# outerlink

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
.claude/cache/agents/architect/: output-20260322-batch2.md  write_plan.py
.claude/cache/agents/kraken/: output-20260320-real-gpu-tests.md
.claude/cache/agents/oracle/: output-cuGetExportTable-2026-03-22.md
.claude/cache/agents/scout/: output-20260321-051312.md
.claude/cache/agents/spark/: output-20260322-merge-conflict.md  output-20260322-merge-conflicts.md
.claude/rules/: documentation-framework.md  project-discipline.md  test-serialization.md
crates/outerlink-cli/: Cargo.toml
crates/outerlink-cli/src/: commands.rs  lib.rs  main.rs
crates/outerlink-cli/tests/: cli_commands.rs
crates/outerlink-client/: Cargo.toml  build.rs
crates/outerlink-client/csrc/: exports.map  interpose.c  interpose.h
crates/outerlink-client/src/: callback.rs  ffi.rs  lib.rs  nvml.rs  nvml_ffi.rs
crates/outerlink-common/: Cargo.toml
crates/outerlink-common/src/: api_recording.rs  bandwidth_scheduler.rs  checkpoint.rs  clock_sync.rs  connection_pool.rs  container.rs  cuda_graph.rs  cuda_types.rs  cuda_version.rs  dashboard.rs  discovery.rs  dpu_offload.rs  error.rs  fault_tolerance.rs  gpu_mixing.rs  gpu_recovery.rs  gpu_sharing.rs  gpu_storage.rs  handle.rs  health.rs  hip_interception.rs  kernel_splitting.rs  kubernetes.rs  lib.rs  live_migration.rs  memory_oversubscription.rs  metrics.rs  multicast.rs  multipath.rs  network_resilience.rs  numa.rs  nvml_types.rs  persistent_kernels.rs  pinned_memory.rs  power_management.rs  protocol.rs  queue_management.rs  rdma_transport.rs  retry.rs  scatter_gather.rs  (+7 more)
crates/outerlink-common/src/memory/: access_monitor.rs  coherency.rs  compression.rs  config.rs  dedup.rs  dedup_tests.rs  fault_handler.rs  migration.rs  migration_engine.rs  mod.rs  page_table.rs  prefetch.rs  pte.rs  tests.rs  tier_manager.rs  tier_status.rs  topology.rs  traits.rs  types.rs
crates/outerlink-common/src/memory/eviction/: arc.rs  car.rs  clock.rs  mod.rs  tests.rs
crates/outerlink-common/tests/: api_recording_tests.rs  gpu_recovery_tests.rs  health_tests.rs  numa_tests.rs  security_tests.rs  usage_metering_tests.rs
crates/outerlink-nccl-plugin/: Cargo.toml
crates/outerlink-nccl-plugin/src/: ffi_types.rs  handles.rs  lib.rs  plugin.rs
crates/outerlink-nccl-plugin/tests/: plugin_test.rs
crates/outerlink-server/: Cargo.toml
crates/outerlink-server/src/: cuda_backend.rs  cuda_thread.rs  gpu_backend.rs  handler.rs  lib.rs  main.rs  metrics_server.rs  server.rs  session.rs
crates/outerlink-server/tests/: bench_transport.rs  cuda_backend_tests.rs  cuda_thread_tests.rs  integration.rs  new_handler_tests.txt  real_gpu_test.rs  real_hardware_progressive.rs  shutdown.rs
crates/outerlink-server/tests/common/: mod.rs
cuda-stubs/: cuda.h
docs/: INDEX.md
docs/architecture/: 00-project-vision.md  01-system-architecture.md
docs/decisions/: ADR-001-license.md  ADR-002-opendma-naming.md
docs/guides/: 01-installation.md  02-quickstart.md  02-testing-on-linux.md
docs/specs/: cuda-function-coverage.md
planning/: INDEX.md
planning/phases/: P1-github-repo-setup.md  P10-multi-node.md  P11-testing-strategy.md  P12-benchmarking-plan.md  P13-documentation-standards.md  P2-dev-environment.md  P3-cicd-pipeline.md  P4-project-skeleton.md  P5-poc-plan.md  P6-core-transport.md  P7-cuda-completeness.md  P8-performance.md  P9-opendma.md
planning/phases/advanced/: 00-ORGANIZATION.md
planning/phases/advanced/phase-07-memory-intelligence/R10-memory-tiering/: README.md  preplan-v2.md  preplan.md  progress.md
planning/phases/advanced/phase-07-memory-intelligence/R14-transport-compression/: README.md  preplan-v2.md  preplan.md  progress.md
planning/phases/advanced/phase-07-memory-intelligence/R20-nccl-backend/: README.md  preplan-v2.md  preplan.md  progress.md
planning/phases/advanced/phase-08-smart-memory/R11-speculative-prefetching/: README.md  preplan-v2.md  preplan.md  progress.md
planning/phases/advanced/phase-08-smart-memory/R12-memory-deduplication/: README.md  preplan-v2.md  preplan.md  progress.md
planning/phases/advanced/phase-08-smart-memory/R17-topology-aware-scheduling/: README.md  preplan-v2.md  preplan.md  progress.md
planning/phases/advanced/phase-08-smart-memory/R19-network-page-faults/: README.md  preplan-v2.md  preplan.md  progress.md
planning/phases/advanced/phase-09-hardening/R15-fault-tolerance/: README.md  preplan-v2.md  preplan.md  progress.md
planning/phases/advanced/phase-09-hardening/R21-gpu-direct-storage/: README.md  preplan-v2.md  preplan.md  progress.md
planning/phases/advanced/phase-09-hardening/R26-ptp-clock-sync/: README.md  preplan-v2.md  preplan.md  progress.md
planning/pre-planning/: 00-master-preplan.md  01-hardware-inventory.md  02-FINAL-PREPLAN.md  03-contingency-plans.md  04-advanced-features-preplan.md
planning/research/: CONSOLIDATION-all-research.md  R1-existing-projects.md  R2-softroce-rdma.md  R3-cuda-interception.md  R4-connectx5-transport-stack.md  R5-gpudirect-geforce-restriction.md  R6-nvlink-cross-pc.md  R7-non-proprietary-gpu-dma.md  R8-kernel-param-introspection.md  R9-multi-transport-usb4-oculink.md  SYNTHESIS-initial-research.md
scripts/: test-real-hardware.sh
side-docs/: INDEX.md
side-docs/notes/: 01-license-comparison.md  02-review-findings.md  2026-03-24-code-review-and-test-prep.md
tests/cuda_test_app/: Makefile  README.md  test_vector_add.c
thoughts/shared/handoffs/kraken-20260320/: current.md
thoughts/shared/handoffs/kraken-20260323/: current.md
thoughts/shared/handoffs/kraken-20260326/: current.md
thoughts/shared/handoffs/kraken-cuda-thread/: current.md
thoughts/shared/handoffs/kraken-health-20260327/: current.md
thoughts/shared/handoffs/kraken-r20-nccl-plugin/: current.md
thoughts/shared/handoffs/kraken-r35-security/: current.md
thoughts/shared/plans/: critical-arch-fixes-plan.md  cuda-completeness-batch2-plan.md
(+107 files in other folders)
