[package]
name = "outerlink-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OuterLink CLI - management tool for GPU pool"

[dependencies]
outerlink-common = { path = "../outerlink-common" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
