[package]
name = "outerlink-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, protocol, and transport traits for OuterLink"

[dependencies]
tokio = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
