[package]
name = "outerlink-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, protocol, and transport traits for OuterLink"

[dependencies]
tokio = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
bitflags = { workspace = true }
lz4_flex = { workspace = true }
zstd = { workspace = true }
xxhash-rust = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
jsonwebtoken = { workspace = true }
mdns-sd = { workspace = true }
metrics = { workspace = true }
rcgen = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
serde_json = { workspace = true }
