[package]
name = "outerlink-nccl-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NCCL Net Plugin for OuterLink transport"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
outerlink-common = { path = "../outerlink-common" }
dashmap = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
