[package]
name = "outerlink-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OuterLink GPU node daemon - executes CUDA operations on behalf of remote clients"

[dependencies]
outerlink-common = { path = "../outerlink-common" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
